FEAT : 복호화 기능